# zotron

./: .env.example  .gitignore  .mocharc.json  CLAUDE.md  README.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.json  update-beta.json  update.json  zotero-plugin.config.ts
claude-plugin/python/: pyproject.toml
claude-plugin/python/tests/: conftest.py  test_artifacts_storage.py  test_chunker.py  test_citation.py  test_cli.py  test_cli_annotations.py  test_cli_attachments.py  test_cli_items.py  test_cli_notes.py  test_cli_search.py  test_cli_settings.py  test_cli_system.py  test_cli_tags.py  test_config.py  test_embedder.py  test_errors.py  test_find_duplicate.py  test_init.py  test_ocr_cli.py  test_ocr_engine.py  test_ocr_normalize.py  test_ocr_processor.py  test_output.py  test_paginate.py  test_pdf_magic.py  test_push.py  test_rag_cli_cite.py  test_rag_cli_zotero.py  test_resolve_collection.py  test_retrieval_hits.py  test_rpc.py  test_search.py  test_storage_artifacts.py
claude-plugin/python/zotero_bridge/: cli.py  config.py  errors.py  push.py
claude-plugin/python/zotron/: __init__.py  _cli_base.py  _output.py  _paginate.py  artifacts.py  cli.py  cli_annotations.py  cli_attachments.py  cli_export.py  (+12 more)
python/: pyproject.toml
python/tests/: conftest.py  test_chunker.py  test_config.py  test_embedder.py  test_errors.py  test_ocr_engine.py  test_ocr_processor.py  test_output.py  test_pdf_magic.py  test_push.py  test_resolve_collection.py  test_search.py
python/zotero_bridge/: __init__.py  _output.py  _paginate.py  cli.py  collections.py  rpc.py
(+119 files in other folders)
