[project]
name = "zotero-bridge"
version = "0.2.0"
requires-python = ">=3.11"
description = "Python client + CLI for Zotero Bridge XPI (JSON-RPC 2.0 over localhost:23119)"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "numpy>=1.24",
    "markdown>=3.7",
    "jq>=1.6",
]

[project.optional-dependencies]
local = ["ollama>=0.4"]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
zotero-bridge = "zotero_bridge.cli:app"
zotero-ocr = "zotero_bridge.ocr.cli:main"
zotero-rag = "zotero_bridge.rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["zotero_bridge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
