[project]
name = "zotron"
version = "0.1.5"
requires-python = ">=3.11"
description = "Python client + CLI for Zotron — typed JSON-RPC bridge between Zotero and AI agents"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "numpy>=1.24",
    "markdown>=3.7",
    "jq>=1.6",
]

[project.optional-dependencies]
local = ["ollama>=0.4"]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
zotron = "zotron.cli:app"
zotron-ocr = "zotron.ocr.cli:main"
zotron-rag = "zotron.rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["zotron"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
